[gd_scene load_steps=17 format=3 uid="uid://dnkkg0hemtvq2"]

[ext_resource type="Texture2D" uid="uid://bvjlqjemqs5lu" path="res://Texture/Player/player.png" id="1_mqbdu"]
[ext_resource type="Script" path="res://Player/player.gd" id="1_qf7vs"]
[ext_resource type="PackedScene" uid="uid://3v40uepb7yea" path="res://Utility/hit_box.tscn" id="3_vhnog"]
[ext_resource type="PackedScene" uid="uid://cctcbdj4hpc6p" path="res://Utility/hurt_box.tscn" id="4_crqao"]
[ext_resource type="Texture2D" uid="uid://c1fqpdkeyppdh" path="res://Texture/GUI/healthbar.png" id="5_otkwa"]
[ext_resource type="Texture2D" uid="uid://wtwr273v45gi" path="res://Texture/GUI/health.png" id="6_yoe16"]
[ext_resource type="PackedScene" uid="uid://lpjo22qvxydr" path="res://Utility/button.tscn" id="7_is1s4"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tog86"]
radius = 8.0
height = 22.0

[sub_resource type="Animation" id="Animation_rydbv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tgsuu"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_bgiri"]
resource_name = "idle"
length = 1.2
loop_mode = 1
step = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 0]
}

[sub_resource type="Animation" id="Animation_bsv5a"]
resource_name = "jump"
step = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [30, 31, 31]
}

[sub_resource type="Animation" id="Animation_eckc0"]
resource_name = "walk"
length = 1.2
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g6mxu"]
_data = {
"RESET": SubResource("Animation_rydbv"),
"attack": SubResource("Animation_tgsuu"),
"idle": SubResource("Animation_bgiri"),
"jump": SubResource("Animation_bsv5a"),
"walk": SubResource("Animation_eckc0")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xu2tf"]
radius = 7.61577

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5nqqi"]
size = Vector2(24, 26)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 0
collision_mask = 5
script = ExtResource("1_qf7vs")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_mqbdu")
hframes = 6
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_tog86")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g6mxu")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -58)
limit_top = -160
limit_bottom = -61

[node name="HitBox" parent="." instance=ExtResource("3_vhnog")]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_xu2tf")
disabled = true

[node name="HurtBox" parent="." instance=ExtResource("4_crqao")]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_5nqqi")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HealthBar" type="TextureProgressBar" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 40.0
offset_bottom = 13.0
max_value = 20.0
value = 17.0
texture_over = ExtResource("5_otkwa")
texture_progress = ExtResource("6_yoe16")

[node name="PauseMenu" type="Panel" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 44.0
offset_top = 33.0
offset_right = 324.0
offset_bottom = 175.0

[node name="Label" type="Label" parent="CanvasLayer/GUI/PauseMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_top = 7.0
offset_right = 32.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Menu"
horizontal_alignment = 1

[node name="QuitButton" parent="CanvasLayer/GUI/PauseMenu" instance=ExtResource("7_is1s4")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 156.0
offset_top = 95.0
offset_right = 236.0
offset_bottom = 131.0
text = "Quit
"

[node name="ReturnButton" parent="CanvasLayer/GUI/PauseMenu" instance=ExtResource("7_is1s4")]
unique_name_in_owner = true
layout_mode = 0
offset_left = 44.0
offset_top = 95.0
offset_right = 124.0
offset_bottom = 131.0
text = "Return
"

[node name="DeadLabel" type="Label" parent="CanvasLayer/GUI"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.639216, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "You are Dead"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="click_end" from="CanvasLayer/GUI/PauseMenu/QuitButton" to="." method="_on_quit_button_click_end"]
[connection signal="click_end" from="CanvasLayer/GUI/PauseMenu/ReturnButton" to="." method="_on_return_button_click_end"]

[editable path="HitBox"]
[editable path="HurtBox"]
